# sdlGameEngine

./: .dir-locals.el  .gitignore  CMakeLists.txt  Init.cpp  Init.h  README.md  l.lua  m.cpp  main.cpp  mouseatlas.txt  nothing.cpp
SDLTest.xcodeproj/: project.pbxproj
ge/: CMakeLists.txt
ge/actions/: .#CMakeLists.txt  CMakeLists.txt
ge/actions/include/ge/: Action.h  AnimationAction.h  GroupAction.h  MoveAction.h  SequenceAction.h
ge/actions/src/: Action.cpp  AnimationAction.cpp  Easing.cpp  GroupAction.cpp  MoveAction.cpp  SequenceAction.cpp
ge/controls/: CMakeLists.txt
ge/controls/include/ge/: Keyboard.h  KeysPressed.h
ge/controls/src/: Keyboard.cpp
ge/init/: CMakeLists.txt
ge/init/include/ge/: Init.h
ge/init/src/: Init.cpp
ge/luaBindings/: CMakeLists.txt
ge/luaBindings/include/ge/: InitLua.h  luaGameTimer.h  luaKeyboard.h  luaRenderer.h  luaScene.h  luaSpriteNode.h  luaTexture.h  luaWindow.h
ge/luaBindings/src/: InitLua.cpp
ge/nodes/: CMakeLists.txt
ge/nodes/include/ge/: CameraNode.h  Node.h  RectNode.h  Scene.h  SpriteNode.h  Updateable.h
ge/nodes/src/: CameraNode.cpp  Node.cpp  RectNode.cpp  Scene.cpp  SpriteNode.cpp
ge/rendering/: CMakeLists.txt
ge/rendering/include/ge/: Font.h  Renderable.h  Renderer.h  SpriteAtlas.h  SpriteAtlasData.h  SpriteAtlasEntry.h  Texture.h  View.h  Window.h
ge/rendering/src/: Font.cpp  Renderer.cpp  SpriteAtlas.cpp  SpriteAtlasEntry.cpp  Texture.cpp  View.cpp  Window.cpp
ge/sound/: CMakeLists.txt
ge/sound/include/ge/: MediaLoader.h  MusicPlayer.h  SfxPlayer.h
ge/sound/src/: MediaLoader.cpp  MusicPlayer.cpp  SfxPlayer.cpp
ge/utils/: CMakeLists.txt
ge/utils/include/ge/: Point.h  Rect.h  StringHelper.h
ge/utils/src/: GameTimer.cpp  Point.cpp  Rect.cpp
notes/: buildingv8.txt
src/: Action.cpp  AnimationAction.cpp  AnimationAction.h  Easing.cpp  GameTimer.cpp  GameTimer.h  GroupAction.cpp  GroupAction.h  MoveAction.cpp  MoveAction.h  Node.cpp  Node.h  Point.cpp  Point.h  Position.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SpriteAtlas.cpp  SpriteAtlas.h  SpriteAtlasEntry.cpp  SpriteAtlasEntry.h  SpriteNode.cpp  SpriteNode.h  Texture.cpp  Texture.h  UUID.h  Window.cpp  main.cpp
src/include/: Action.h  AnimationAction.h  Easing.h  GroupAction.h  Hashable.h  MoveAction.h  Node.h  Rect.h  Renderable.h  Scene.h  SpriteAtlas.h  SpriteNode.h  Texture.h
src/src/: Action.cpp  AnimationAction.cpp  Easing.cpp  GameTimer.cpp  GroupAction.cpp  MoveAction.cpp  Node.cpp  Point.cpp  Renderer.cpp  Scene.cpp  SpriteAtlas.cpp  SpriteAtlasEntry.cpp  SpriteNode.cpp  Texture.cpp  Window.cpp
